--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poiret+One&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Aravis Designs</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
